<resources>
    <string name="app_name">PandemicPal</string>
    <string name="petname">PetName</string>
    <string name="toilet">Toilet</string>
    <string name="feed">Feed</string>
    <string name="meds">Meds</string>
    <string name="groom">Groom</string>
    <string name="walk">Walk</string>
    <string name="play">Play</string>
    <string name="todo">TODO</string>
    <string name="pandemic_pal">Pandemic Pal</string>
    <string name="start">Start</string>
</resources>